fix scrollbar bug

--- a/apps/nextjs/src/styles/globals.css
+++ b/apps/nextjs/src/styles/globals.css
@@ -46,6 +46,32 @@
   --accent: #fff;
 }
 
+/* Custom Scrollbar Styles */
+::-webkit-scrollbar {
+  width: 12px;
+}
+
+::-webkit-scrollbar-track {
+  background: var(--body);
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: var(--stroke);
+  border-radius: 6px;
+  border: 3px solid var(--body);
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: var(--secondary-text);
+}
+
+/* For Firefox */
+* {
+  scrollbar-width: thin;
+  scrollbar-color: var(--stroke) var(--body);
+}
+
+
 .p-mobile {
   padding-bottom: 8px;
   padding-bottom: calc(env(safe-area-inset-bottom, 0) + 8px);
@@ -142,6 +168,7 @@
 @tailwind utilities;
 
 @layer utilities {
+
   /* Hide scrollbar for Chrome, Safari and Opera */
   .hide-scrollbar::-webkit-scrollbar {
     display: none;
